@@ -1,20 +1,38 @@
 package com.mantecasl.accommodationapp.business.controller;
 
-import com.mantecasl.accommodationapp.business.entity.*;
-import com.mantecasl.accommodationapp.business.persistance.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.util.Date;
+import java.util.List;
+
+import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Date;
-import java.util.List;
-import java.util.stream.Collectors;
+import com.mantecasl.accommodationapp.business.entity.Inmueble;
+import com.mantecasl.accommodationapp.business.entity.Notificacion;
+import com.mantecasl.accommodationapp.business.entity.Reserva;
+import com.mantecasl.accommodationapp.business.entity.SolicitudReserva;
+import com.mantecasl.accommodationapp.business.entity.Usuario;
+import com.mantecasl.accommodationapp.business.persistance.NotificacionDAO;
 
 @Service
 public class GestorNotificaciones {
     
-    @Autowired
+    // Constantes para URLs
+    private static final String URL_RESERVAS = "/reservas/";
+    private static final String URL_RESERVAS_CANCELADAS = "/reservas/canceladas";
+    private static final String URL_PROPIETARIO_RESERVAS = "/propietario/reservas/";
+    private static final String URL_PROPIETARIO_SOLICITUDES = "/propietario/solicitudes/";
+    
+    // Constantes para formatos de mensaje
+    private static final String MSG_MENSAJE_PROPIETARIO = "Mensaje sobre tu reserva en %s:%n\n%s";
+    
     private NotificacionDAO notificacionDAO;
+    private ObjectProvider<GestorNotificaciones> selfProvider;
+
+    public GestorNotificaciones(NotificacionDAO notificacionDAO, ObjectProvider<GestorNotificaciones> selfProvider) {
+        this.notificacionDAO = notificacionDAO;
+        this.selfProvider = selfProvider;
+    }
 
     @Transactional
     public Notificacion crearNotificacionSolicitudNueva(SolicitudReserva solicitud) {
@@ -33,7 +51,7 @@ public class GestorNotificaciones {
         notificacion.setTipo(Notificacion.SOLICITUD_NUEVA);
         notificacion.setInmueble(solicitud.getInmueble());
         notificacion.setSolicitud(solicitud);
-        notificacion.setAccionUrl("/propietario/solicitudes/" + solicitud.getId());
+        notificacion.setAccionUrl(URL_PROPIETARIO_SOLICITUDES + solicitud.getId());
         
         return notificacionDAO.save(notificacion);
     }
@@ -56,7 +74,7 @@ public class GestorNotificaciones {
         notificacion.setInmueble(solicitud.getInmueble());
         notificacion.setSolicitud(solicitud);
         notificacion.setReserva(solicitud.getReserva());
-        notificacion.setAccionUrl("/reservas/" + solicitud.getReserva().getId());
+        notificacion.setAccionUrl(URL_RESERVAS + solicitud.getReserva().getId());
         
         return notificacionDAO.save(notificacion);
     }
@@ -115,7 +133,7 @@ public class GestorNotificaciones {
             notificacion.setTipo(Notificacion.RESERVA_CANCELADA);
             notificacion.setInmueble(inmueble);
             notificacion.setReserva(reserva);
-            notificacion.setAccionUrl("/reservas/canceladas");
+            notificacion.setAccionUrl(URL_RESERVAS_CANCELADAS);
             
             notificacionDAO.save(notificacion);
         }
@@ -161,7 +179,7 @@ public class GestorNotificaciones {
         notifInquilino.setTipo(Notificacion.RESERVA_CONFIRMADA);
         notifInquilino.setInmueble(reserva.getInmueble());
         notifInquilino.setReserva(reserva);
-        notifInquilino.setAccionUrl("/reservas/" + reserva.getId());
+        notifInquilino.setAccionUrl(URL_RESERVAS + reserva.getId());
         notificacionDAO.save(notifInquilino);
         
         // Notificación para el propietario
@@ -180,12 +198,12 @@ public class GestorNotificaciones {
         notifPropietario.setTipo(Notificacion.RESERVA_CONFIRMADA); 
         notifPropietario.setInmueble(reserva.getInmueble());
         notifPropietario.setReserva(reserva);
-        notifPropietario.setAccionUrl("/propietario/reservas/" + reserva.getId());
+        notifPropietario.setAccionUrl(URL_PROPIETARIO_RESERVAS + reserva.getId());
         notificacionDAO.save(notifPropietario);
     }
     
     @Transactional
-    public Notificacion crearNotificacionReservaCanceladaPorPropietario(Reserva reserva, String motivo) {
+    public Notificacion crearNotificacionReservaCanceladaPorPropietario(Reserva reserva, String motivo, String direccionInmueble) {
         Usuario inquilino = reserva.getInquilino().getUsuario();
         
         Notificacion notificacion = new Notificacion();
@@ -193,19 +211,46 @@ public class GestorNotificaciones {
         notificacion.setTitulo("⚠️ Reserva CANCELADA por el propietario");
         notificacion.setMensaje(String.format(
             "Tu reserva en %s del %s al %s ha sido CANCELADA por el propietario. " +
-            "Motivo: %s. Tu pago ha sido reembolsado.",
-            reserva.getInmueble().getDireccion(),
+            "Motivo: %s. Tu pago será reembolsado en un plazo inferior a 48 horas.",
+            direccionInmueble,
             reserva.getFechaInicio(),
             reserva.getFechaFin(),
             motivo != null ? motivo : "No especificado"
         ));
         notificacion.setTipo(Notificacion.RESERVA_CANCELADA);
-        notificacion.setInmueble(reserva.getInmueble());
-        notificacion.setReserva(reserva);
-        notificacion.setAccionUrl("/reservas/canceladas");
+        notificacion.setAccionUrl(URL_RESERVAS_CANCELADAS);
+        
+        // No establecer relaciones que ya no existirán
+        notificacion.setInmueble(null);
+        notificacion.setReserva(null);
+        
+        // No establecer relaciones que ya no existirán
+        notificacion.setInmueble(null);
+        notificacion.setReserva(null);
         
         return notificacionDAO.save(notificacion);
     }
+    
+    @Transactional
+    public Notificacion crearNotificacionSolicitudRechazadaPorEliminacion(SolicitudReserva solicitud, String direccionInmueble) {
+        Usuario solicitante = solicitud.getInquilino().getUsuario();
+        
+        Notificacion notificacion = new Notificacion();
+        notificacion.setUsuario(solicitante);
+        notificacion.setTitulo("❌ Solicitud de reserva RECHAZADA");
+        notificacion.setMensaje(String.format(
+            "Tu solicitud de reserva para %s ha sido rechazada porque la propiedad ha sido eliminada por el propietario.",
+            direccionInmueble
+        ));
+        notificacion.setTipo(Notificacion.SOLICITUD_RECHAZADA);
+        notificacion.setAccionUrl("/mis-solicitudes");
+        
+        notificacion.setInmueble(null);
+        notificacion.setReserva(null);
+        
+        return notificacionDAO.save(notificacion);
+    }
+
     
     @Transactional
     public Notificacion crearNotificacionMensajePropietario(Reserva reserva, String mensaje) {
@@ -215,14 +260,14 @@ public class GestorNotificaciones {
         notificacion.setUsuario(inquilino);
         notificacion.setTitulo("💬 Mensaje del propietario");
         notificacion.setMensaje(String.format(
-            "Mensaje sobre tu reserva en %s:\n\n%s",
+            MSG_MENSAJE_PROPIETARIO,
             reserva.getInmueble().getDireccion(),
             mensaje
         ));
         notificacion.setTipo(Notificacion.MENSAJE_PROPIETARIO);
         notificacion.setInmueble(reserva.getInmueble());
         notificacion.setReserva(reserva);
-        notificacion.setAccionUrl("/reservas/" + reserva.getId());
+        notificacion.setAccionUrl(URL_RESERVAS + reserva.getId());
         
         return notificacionDAO.save(notificacion);
     }
@@ -241,7 +286,7 @@ public class GestorNotificaciones {
                 .stream()
                 .filter(n -> n.getFechaCreacion().isAfter(
                         fechaLimite.toInstant().atZone(java.time.ZoneId.systemDefault()).toLocalDateTime()))
-                .collect(Collectors.toList());
+                .toList();
     }
     
     public long contarNotificacionesNoLeidas(Usuario usuario) {
@@ -258,7 +303,7 @@ public class GestorNotificaciones {
     
     @Transactional
     public void marcarTodasComoLeidas(Usuario usuario) {
-        List<Notificacion> noLeidas = obtenerNotificacionesNoLeidas(usuario);
+        List<Notificacion> noLeidas = selfProvider.getObject().obtenerNotificacionesNoLeidas(usuario);
         for (Notificacion notificacion : noLeidas) {
             notificacion.setLeida(true);
         }
@@ -272,7 +317,7 @@ public class GestorNotificaciones {
     
     @Transactional
     public void eliminarTodasLasNotificaciones(Usuario usuario) {
-        List<Notificacion> notificaciones = obtenerNotificacionesUsuario(usuario);
+        List<Notificacion> notificaciones = selfProvider.getObject().obtenerNotificacionesUsuario(usuario);
         notificacionDAO.deleteAll(notificaciones);
     }
     
@@ -290,16 +335,16 @@ public class GestorNotificaciones {
     
     @Transactional
     public Notificacion notificarNuevaSolicitudPropietario(SolicitudReserva solicitud) {
-        return crearNotificacionSolicitudNueva(solicitud);
+        return selfProvider.getObject().crearNotificacionSolicitudNueva(solicitud);
     }
     
     @Transactional
     public Notificacion notificarAprobacionInquilino(SolicitudReserva solicitud) {
-        return crearNotificacionSolicitudAprobada(solicitud);
+        return selfProvider.getObject().crearNotificacionSolicitudAprobada(solicitud);
     }
     
     @Transactional
     public Notificacion notificarRechazoInquilino(SolicitudReserva solicitud, String motivo) {
-        return crearNotificacionSolicitudRechazada(solicitud, motivo);
+        return selfProvider.getObject().crearNotificacionSolicitudRechazada(solicitud, motivo);
     }
 }
