@@ -1,14 +1,13 @@
 package com.mantecasl.accommodationapp.business.controller;
 
 import com.mantecasl.accommodationapp.business.entity.*;
+import com.mantecasl.accommodationapp.business.exception.ReservaException;
 import com.mantecasl.accommodationapp.business.persistance.*;
 
 import jakarta.servlet.http.HttpSession;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
@@ -17,63 +16,88 @@ import org.springframework.web.bind.annotation.*;
 @RequestMapping("/propietario")
 public class SolicitudesController {
 
-    @Autowired
-    private SolicitudReservaDAO solicitudReservaDAO;
+    private static final String ATTR_USUARIO = "usuario";
+    private static final String ATTR_RESERVA = "reserva";
+    private static final String ATTR_SOLICITUDES_PENDIENTES = "solicitudesPendientes";
+    private static final String ATTR_SOLICITUDES_RECIENTES = "solicitudesRecientes";
+    private static final String ATTR_PROPIETARIO = "propietario";
+    private static final String ATTR_NUMERO_PENDIENTES = "numeroPendientes";
 
-    @Autowired
-    private ReservaDAO reservaDAO;
+    private static final String VIEW_PETICION = "peticion";
+    private static final String VIEW_NOTIFICACIONES = "notificaciones";
 
-    @Autowired
-    private DisponibilidadDAO disponibilidadDAO;
+    private static final String REDIRECT_LOGIN = "redirect:/login";
+    private static final String REDIRECT_HOME = "redirect:/";
+    private static final String REDIRECT_NOTIFICACIONES = "redirect:/propietario/notificaciones";
+    private static final String REDIRECT_NOTIFICACIONES_ERROR_FECHAS = REDIRECT_NOTIFICACIONES + "?error=Fechas+no+disponibles";
+    private static final String REDIRECT_NOTIFICACIONES_EXITO_APROBADA = REDIRECT_NOTIFICACIONES + "?exito=Solicitud+aprobada";
+    private static final String REDIRECT_NOTIFICACIONES_EXITO_RECHAZADA = REDIRECT_NOTIFICACIONES + "?exito=Solicitud+rechazada";
 
-    @Autowired
-    private GestorDisponibilidad gestorDisponibilidad;
+    private static final String ESTADO_PENDIENTE = "PENDIENTE";
+    private static final String MSG_SOLICITUD_NO_ENCONTRADA = "Solicitud no encontrada";
+    private static final String MSG_FECHAS_NO_DISPONIBLES = "Fechas no disponibles";
+    private static final String MSG_RESERVA_APROBADA = "Reserva aprobada.";
 
-    @Autowired
-    private PropietarioDAO propietarioDAO;
+    private final SolicitudReservaDAO solicitudReservaDAO;
+    private final ReservaDAO reservaDAO;
+    private final DisponibilidadDAO disponibilidadDAO;
+    private final GestorDisponibilidad gestorDisponibilidad;
+    private final PropietarioDAO propietarioDAO;
+    private final GestorNotificaciones notificacion;
+    private final InmuebleDAO inmuebleDAO;
 
-    @Autowired
-    private GestorNotificaciones notificacion;
-
-    @Autowired
-    private InmuebleDAO inmuebleDAO;
+    public SolicitudesController(SolicitudReservaDAO solicitudReservaDAO,
+                                 ReservaDAO reservaDAO,
+                                 DisponibilidadDAO disponibilidadDAO,
+                                 GestorDisponibilidad gestorDisponibilidad,
+                                 PropietarioDAO propietarioDAO,
+                                 GestorNotificaciones notificacion,
+                                 InmuebleDAO inmuebleDAO) {
+        this.solicitudReservaDAO = solicitudReservaDAO;
+        this.reservaDAO = reservaDAO;
+        this.disponibilidadDAO = disponibilidadDAO;
+        this.gestorDisponibilidad = gestorDisponibilidad;
+        this.propietarioDAO = propietarioDAO;
+        this.notificacion = notificacion;
+        this.inmuebleDAO = inmuebleDAO;
+    }
 
     @GetMapping("/reserva/{id}")
     public String verSolicitud(@PathVariable Long id,
                             HttpSession session,
                             Model model) {
 
-        Usuario usuario = (Usuario) session.getAttribute("usuario");
-        if (usuario == null) return "redirect:/login";
+        Usuario usuario = (Usuario) session.getAttribute(ATTR_USUARIO);
+        if (usuario == null) return REDIRECT_LOGIN;
 
         Propietario propietario = propietarioDAO.findByUsuarioId(usuario.getId());
-        if (propietario == null) return "redirect:/";
+        if (propietario == null) return REDIRECT_HOME;
 
         SolicitudReserva solicitud = solicitudReservaDAO.findById(id)
-                .orElseThrow(() -> new RuntimeException("Solicitud no encontrada"));
+            .orElseThrow(() -> new ReservaException(MSG_SOLICITUD_NO_ENCONTRADA));
 
         if (!solicitud.getInmueble().getPropietario().getId()
                 .equals(propietario.getId())) {
-            return "redirect:/";
+            return REDIRECT_HOME;
         }
 
-        model.addAttribute("reserva", solicitud);
-        return "peticion";   
+        model.addAttribute(ATTR_RESERVA, solicitud);
+        return VIEW_PETICION;   
     }
 
     @GetMapping("/notificaciones")
     public String verNotificaciones(HttpSession session, Model model) {
-        Usuario usuario = (Usuario) session.getAttribute("usuario");
+        Usuario usuario = (Usuario) session.getAttribute(ATTR_USUARIO);
         
         if (usuario == null) {
-            return "redirect:/login";
+            return REDIRECT_LOGIN;
         }
         
         //Verificar que es propietario
         Propietario propietario = propietarioDAO.findByUsuarioId(usuario.getId());
         if (propietario == null) {
             // Si no es propietario, redirigir
-            return "redirect:/";
+            return REDIRECT_HOME;
         }
         
         //Obtener inmuebles del propietario
@@ -81,36 +105,36 @@ public class SolicitudesController {
             .filter(inmueble -> 
                 inmueble.getPropietario() != null && 
                 inmueble.getPropietario().getId().equals(propietario.getId()))
-            .collect(Collectors.toList());
+            .toList();
         
         //Obtener IDs de inmuebles
         List<Long> inmuebleIds = inmuebles.stream()
             .map(Inmueble::getId)
-            .collect(Collectors.toList());
+            .toList();
         
         List<SolicitudReserva> todasSolicitudes = solicitudReservaDAO.findAll();
         
         List<SolicitudReserva> solicitudesPendientes = todasSolicitudes.stream()
             .filter(solicitud -> 
                 inmuebleIds.contains(solicitud.getInmueble().getId()) &&
-                "PENDIENTE".equals(solicitud.getEstado()))
-            .collect(Collectors.toList());
+                ESTADO_PENDIENTE.equals(solicitud.getEstado()))
+            .toList();
         
         List<SolicitudReserva> solicitudesRecientes = todasSolicitudes.stream()
             .filter(solicitud -> 
                 inmuebleIds.contains(solicitud.getInmueble().getId()))
             .limit(10)
-            .collect(Collectors.toList());
+            .toList();
         
         //Contar notificaciones pendientes
         long numeroPendientes = solicitudesPendientes.size();
         
-        model.addAttribute("solicitudesPendientes", solicitudesPendientes);
-        model.addAttribute("solicitudesRecientes", solicitudesRecientes);
-        model.addAttribute("propietario", propietario);
-        model.addAttribute("numeroPendientes", numeroPendientes);
+        model.addAttribute(ATTR_SOLICITUDES_PENDIENTES, solicitudesPendientes);
+        model.addAttribute(ATTR_SOLICITUDES_RECIENTES, solicitudesRecientes);
+        model.addAttribute(ATTR_PROPIETARIO, propietario);
+        model.addAttribute(ATTR_NUMERO_PENDIENTES, numeroPendientes);
         
-        return "notificaciones";
+        return VIEW_NOTIFICACIONES;
     }
 
     //Aprobar solicitud
@@ -119,18 +143,18 @@ public class SolicitudesController {
                                 @RequestParam(required = false) String mensaje,
                                 HttpSession session) {
 
-        Usuario usuario = (Usuario) session.getAttribute("usuario");
-        if (usuario == null) return "redirect:/login";
+        Usuario usuario = (Usuario) session.getAttribute(ATTR_USUARIO);
+        if (usuario == null) return REDIRECT_LOGIN;
 
         Propietario propietario = propietarioDAO.findByUsuarioId(usuario.getId());
-        if (propietario == null) return "redirect:/";
+        if (propietario == null) return REDIRECT_HOME;
 
         SolicitudReserva solicitud = solicitudReservaDAO.findById(id)
-                .orElseThrow(() -> new RuntimeException("Solicitud no encontrada"));
+            .orElseThrow(() -> new ReservaException(MSG_SOLICITUD_NO_ENCONTRADA));
 
         if (!solicitud.getInmueble().getPropietario().getId()
                 .equals(propietario.getId())) {
-            return "redirect:/";
+            return REDIRECT_HOME;
         }
 
         //Verificar que aún esté disponible
@@ -139,13 +163,13 @@ public class SolicitudesController {
                 solicitud.getFechaInicio(), 
                 solicitud.getFechaFin())) {
             // Si ya no está disponible, rechazar automáticamente
-            solicitud.rechazar("Fechas no disponibles");
+            solicitud.rechazar(MSG_FECHAS_NO_DISPONIBLES);
             solicitudReservaDAO.save(solicitud);
-            return "redirect:/propietario/notificaciones?error=Fechas+no+disponibles";
+            return REDIRECT_NOTIFICACIONES_ERROR_FECHAS;
         }
 
         //Aprobar la solicitud
-        solicitud.aprobar(mensaje != null ? mensaje : "Reserva aprobada.");
+        solicitud.aprobar(mensaje != null ? mensaje : MSG_RESERVA_APROBADA);
         
         //Crear reserva desde la solicitud (los datos de pago ya están en el inquilino)
         Reserva reserva = solicitud.crearReserva();
@@ -166,31 +190,31 @@ public class SolicitudesController {
 
         notificacion.crearNotificacionSolicitudAprobada(solicitud);
 
-        return "redirect:/propietario/notificaciones?exito=Solicitud+aprobada";
+        return REDIRECT_NOTIFICACIONES_EXITO_APROBADA;
     }
 
     //Rechazar Solicitud
     @PostMapping("/reserva/{id}/rechazar")
     public String rechazarSolicitud(@PathVariable Long id, @RequestParam String motivo, HttpSession session) {
 
-        Usuario usuario = (Usuario) session.getAttribute("usuario");
-        if (usuario == null) return "redirect:/login";
+        Usuario usuario = (Usuario) session.getAttribute(ATTR_USUARIO);
+        if (usuario == null) return REDIRECT_LOGIN;
 
         Propietario propietario = propietarioDAO.findByUsuarioId(usuario.getId());
-        if (propietario == null) return "redirect:/";
+        if (propietario == null) return REDIRECT_HOME;
 
         SolicitudReserva solicitud = solicitudReservaDAO.findById(id)
-                .orElseThrow(() -> new RuntimeException("Solicitud no encontrada"));
+            .orElseThrow(() -> new ReservaException(MSG_SOLICITUD_NO_ENCONTRADA));
 
         if (!solicitud.getInmueble().getPropietario().getId()
                 .equals(propietario.getId())) {
-            return "redirect:/";
+            return REDIRECT_HOME;
         }
 
         solicitud.rechazar(motivo);
         solicitudReservaDAO.save(solicitud);
 
         notificacion.crearNotificacionSolicitudRechazada(solicitud, motivo);
-        return "redirect:/propietario/notificaciones?exito=Solicitud+rechazada";
+        return REDIRECT_NOTIFICACIONES_EXITO_RECHAZADA;
     }
 }
